# BU SATIRI VEYA BLOĞU TAMAMEN SİLİN:
# [workspace]
# members = [...]

[package]
name = "redirection-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
deadpool-redis = { version = "0.14", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"
url = "2.5.7"
thiserror = "2.0.16"


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
